# engge

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.MD  TODO.MD  appInfo.cmake  appveyor.yml  engge.nut  test.nut
src/: Actor.cpp  ActorIcons.cpp  Animation.cpp  BlinkState.cpp  CMakeLists.txt  Callback.cpp  Camera.cpp  Costume.cpp  CostumeAnimation.cpp  CostumeLayer.cpp  Cutscene.cpp  EnggeApplication.cpp  Engine.cpp  EngineSettings.cpp  Entity.cpp  FntFont.cpp  Font.cpp  GGActor.cpp  GGAnim.cpp  GGAnimation.cpp  GGCostume.cpp  GGCostumeAnimation.cpp  GGEngine.cpp  GGFont.cpp  GGLayer.cpp  GGLip.cpp  GGObject.cpp  GGPack.cpp  GGRoom.cpp  GGTextDatabase.cpp  GGTextObject.cpp  Game.cpp  Graph.cpp  Inventory.cpp  JsonTokenReader.cpp  Layer.cpp  Light.cpp  Lip.cpp  Locator.cpp  Logger.cpp  (+50 more)
src/Audio/: SoundDefinition.cpp  SoundId.cpp  SoundManager.cpp  SoundTrigger.cpp
src/Debugger/: Debugger.cpp  DebuggerServer.cpp  _ByteBuffer.h  _DebugSession.h  _Handles.h  _ProtocolServer.h
src/Dialog/: Ast.cpp  AstDump.hpp  ConditionVisitor.cpp  DialogManager.cpp  DialogPlayer.cpp  DialogVisitor.cpp  EngineDialogScript.cpp  ExpressionVisitor.cpp  YackParser.cpp  YackTokenReader.cpp  _AstDump.h  _AstDump.hpp  _DialogVisitor.h  _ExecuteCodeFunction.h  _ExecuteCodeFunction.hpp  _GotoFunction.hpp  _PauseFunction.h  _PauseFunction.hpp  _SayFunction.h  _SayFunction.hpp  _ShutupFunction.h  _ShutupFunction.hpp  _WaitWhileFunction.h  _WaitWhileFunction.hpp
src/Engine/: AchievementManager.cpp  AchievementManager.hpp  ActorIcons.cpp  Callback.cpp  Camera.cpp  Cutscene.cpp  DebugFeatures.hpp  Engine.cpp  EngineImpl.cpp  EngineImpl.hpp  EngineSettings.cpp  EntityManager.cpp  Hud.cpp  Inventory.cpp  Light.cpp  Preferences.cpp  Sentence.cpp  Shaders.cpp  Shaders.hpp  TextDatabase.cpp  Thread.cpp  ThreadBase.cpp  TimeFunction.cpp  Trigger.cpp  _DebugFeatures.hpp
src/Entities/: Actor.cpp  AnimationLoader.cpp  BlinkState.cpp  Costume.cpp  Entity.cpp  JiggleFunction.cpp  JiggleFunction.hpp  LipAnimation.cpp  LipAnimation.hpp  Object.cpp  ShakeFunction.cpp  ShakeFunction.hpp  TalkingState.cpp  TalkingState.hpp  TextObject.cpp  WalkingState.cpp  WalkingState.hpp
src/Entities/Actor/: Actor.cpp  BlinkState.cpp  Costume.cpp  CostumeAnimation.cpp  CostumeLayer.cpp  LipAnimation.cpp  LipAnimation.hpp  TalkingState.cpp  TalkingState.hpp  _LipAnimation.h  _LipAnimation.hpp  _TalkingState.h  _TalkingState.hpp
src/Entities/Objects/: AnimControl.cpp  AnimDrawable.cpp  Animation.cpp  AnimationFrame.cpp  Object.cpp  TextObject.cpp
src/Font/: FntFont.cpp  Font.cpp  GGFont.cpp
src/Graphics/: AnimControl.cpp  AnimDrawable.cpp  FntFont.cpp  GGFont.cpp  GraphDrawable.cpp  GraphDrawable.hpp  LightingShader.cpp  NGText.cpp  PathDrawable.cpp  PathDrawable.hpp  ResourceManager.cpp  SpriteSheet.cpp  Text.cpp  TextureManager.cpp  WalkboxDrawable.cpp  WalkboxDrawable.hpp  _Path.cpp  _Path.hpp  _WalkboxDrawable.cpp  _WalkboxDrawable.hpp
src/Input/: CommandManager.cpp  InputMappings.cpp
src/Math/: Segment.cpp  Segment.hpp  Vector.cpp  Vector.hpp  clipper.cpp
src/Math/PathFinding/: Graph.cpp  GraphEdge.cpp  PathFinder.cpp  Walkbox.cpp  _AstarAlgorithm.cpp  _AstarAlgorithm.hpp  _IndexedPriorityQueue.cpp  _IndexedPriorityQueue.hpp  _Path.cpp  _Path.h  _Path.hpp  _WalkboxDrawable.cpp  _WalkboxDrawable.h  _WalkboxDrawable.hpp
src/Parsers/: GGHashReader.cpp  GGHashWriter.cpp  GGPack.cpp  GGPackBufferStream.cpp  GGPackValue.cpp  JsonTokenReader.cpp  Lip.cpp  SavegameManager.cpp  YackParser.cpp  YackTokenReader.cpp
src/PathFinding/: Funnel.cpp  Funnel.h  Graph.cpp  GraphEdge.cpp  PathFinder.cpp  Walkbox.cpp  _AstarAlgorithm.cpp  _AstarAlgorithm.h  _IndexedPriorityQueue.cpp  _IndexedPriorityQueue.h  _Path.cpp  _Path.h  _WalkboxDrawable.cpp
src/Room/: Room.cpp  RoomLayer.cpp  RoomScaling.cpp  RoomTrigger.cpp  RoomTrigger.hpp  RoomTriggerThread.cpp  RoomTriggerThread.hpp  _RoomTrigger.cpp  _RoomTrigger.h  _RoomTrigger.hpp
src/Scripting/: ActorPack.hpp  ActorWalk.cpp  ActorWalk.hpp  DefaultScriptExecute.cpp  DefaultScriptExecute.hpp  DefaultVerbExecute.cpp  DefaultVerbExecute.hpp  GeneralPack.hpp  ObjectPack.hpp  PostWalk.cpp  PostWalk.hpp  ReachAnim.cpp  ReachAnim.hpp  RoomPack.hpp  ScriptEngine.cpp  ScriptEngine.inl  SetDefaultVerb.cpp  SetDefaultVerb.hpp  SoundPack.hpp  SystemPack.hpp  VerbExecuteFunction.cpp  VerbExecuteFunction.hpp  _ActorPack.h  _ActorPack.hpp  _DefaultScriptExecute.h  _DefaultScriptExecute.hpp  _DefaultVerbExecute.h  _DefaultVerbExecute.hpp  _GeneralPack.h  _GeneralPack.hpp  _ObjectPack.h  _ObjectPack.hpp  _RoomPack.h  _RoomPack.hpp  _RoomTrigger.h  _SoundPack.h  _SoundPack.hpp  _SystemPack.h  _SystemPack.hpp  _bnutPass.h  (+1 more)
src/System/: ActorTools.hpp  CameraTools.hpp  ConsoleTools.hpp  DebugControls.hpp  DebugTools.hpp  GeneralTools.hpp  Logger.cpp  ObjectTools.hpp  PreferencesTools.hpp  RoomTools.hpp  SoundTools.hpp  TextureTools.hpp  ThreadTools.hpp  _ActorTools.hpp  _CameraTools.hpp  _ConsoleTools.hpp  _DebugControls.hpp  _DebugTools.h  _DebugTools.hpp  _GeneralTools.hpp  _ObjectTools.hpp  _PreferencesTools.hpp  _RoomTools.hpp  _SoundTools.hpp  _TextureTools.hpp  _ThreadTools.hpp  _Util.cpp  _Util.h  _Util.hpp
src/System/DebugTools/: ActorTools.cpp  ActorTools.hpp  CameraTools.cpp  CameraTools.hpp  Console.cpp  Console.hpp  ConsoleTools.cpp  ConsoleTools.hpp  DebugControls.cpp  DebugControls.hpp  DebugTools.cpp  DebugTools.hpp  GeneralTools.cpp  GeneralTools.hpp  ObjectTools.cpp  ObjectTools.hpp  RoomTools.cpp  (+9 more)
src/UI/: Button.cpp  Button.hpp  Checkbox.cpp  Checkbox.hpp  Control.cpp  Control.hpp  ControlConstants.hpp  HelpDialog.cpp  HelpDialog.hpp  OptionsDialog.cpp  QuitDialog.cpp  SaveLoadDialog.cpp  Slider.cpp  Slider.hpp  StartScreenDialog.cpp  SwitchButton.cpp  SwitchButton.hpp  _Button.h  _Button.hpp  _Checkbox.h  _Checkbox.hpp  _ControlConstants.h  _ControlConstants.hpp  _Slider.h  _Slider.hpp  _SwitchButton.h  _SwitchButton.hpp
src/Util/: BTEACrypto.cpp  Dumper.hpp  RandomNumberGenerator.cpp  Util.cpp  Util.hpp
(+342 files in other folders)
